Generate choice model

--- a/app/views/surveys/_survey.html.haml
+++ b/app/views/surveys/_survey.html.haml
@@ -4,7 +4,7 @@
       %h2
         = link_to survey.name, [survey.customer, survey]
         %small
-          = survey.client.name
+          = survey.customer.name
       %p
         = survey.description
     .col-md-3
