--- a/app/views/customers/_customer.html.haml
+++ b/app/views/customers/_customer.html.haml
@@ -16,6 +16,6 @@
             %span.caret
         %ul.dropdown-menu
           %li
-            = link_to "All Surveys", "#"
+            = link_to "All Surveys", [customer, :surveys]
           %li
-            = link_to "Create new", "#"
+            = link_to "Create new", [:new, customer, :survey]
