--- a/app/views/surveys/_form.html.haml
+++ b/app/views/surveys/_form.html.haml
@@ -1,5 +1,13 @@
 = simple_form_for [@customer, @survey] do |f|
   = f.input :name, label: false, placeholder: "Name"
   = f.input :description, label: false, placeholder: "Description"
+
+  = f.fields_for :questions do |builder|
+    = render "question_fields", f: builder
+
+  .form-group
+    = link_to_add_fields fa_icon("plus", text: "Add some questions"),
+      f, :questions, "btn btn-warning btn-sm"
+
   = f.button :submit, "Save survey",
     class: "btn-block btn-primary", data: { disable_with: "Saving survey..." }
