--- a/app/views/surveys/_question_fields.html.haml
+++ b/app/views/surveys/_question_fields.html.haml
@@ -1,23 +1,17 @@
 .question-fields
-  %h4
+  %h2
     Question
 
-  = f.input :name, label: false, placeholder: "Whats your question?"
-  = f.input :answer_type, label: false, input_html: { data: { behavior: "question_type" } },
-    collection: Question::OPTIONS.map {|obj| [obj[:name], obj[:type]]},
+  = f.input :title, label: false, placeholder: "Whats your question?"
+  = f.input :question_type_id, label: false, input_html: { data: { behavior: "question_type" } },
+    collection: QuestionType.all.collect {|q| [ q.name, q.id ] },
     prompt: "--- Select type of answer ---"
   .form-group
-    = link_to_add_fields fa_icon("plus", text: "Options"), f,
-      :options, "btn btn-primary btn-xs #{show_option_button(f.object.answer_type)}"
-  = f.fields_for :options do |builder|
-    = render "option_fields", f: builder
-
-  .form-group.btn-list
     = f.hidden_field :_destroy
     = link_to fa_icon("close", text: "Remove Question"), "#", class: "btn btn-danger btn-xs",
       data: { behavior: "remove_question_fields" }
-    = link_to_add_fields fa_icon("plus", text: "Possible Answers"), f,
-      :answers, "btn btn-success btn-xs #{show_answer_button(f.object.answer_type)}"
+    = link_to_add_fields fa_icon("plus", text: "Add some choices"), f,
+      :choices, "btn btn-success btn-xs"
 
-  = f.fields_for :answers do |builder|
-    = render "answer_fields", f: builder, question: f.object
+  = f.fields_for :choices do |builder|
+    = render "choice_fields", f: builder
