--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -10,7 +10,7 @@
       = fa_icon "chevron-down"
     %ul.dropdown-menu
       %li
-        = link_to "Preview this survey", [:new, @survey, :submission]
+        = link_to "Preview this survey", "#"
       %li
         = link_to "Edit survey", [:edit, @customer, @survey]
       %li
