Generate join table for choice_answers. Also generate option model and option_answers model

--- a/app/views/customers/_customer.html.haml
+++ b/app/views/customers/_customer.html.haml
@@ -12,7 +12,8 @@
         "data-toggle": "dropdown", href: "#", role: "button"}
           %h2
             %strong
-              12 Surveys
+              = customer.surveys.count
+              Surveys
             %span.caret
         %ul.dropdown-menu
           %li
