--- a/app/views/submissions/new.html.haml
+++ b/app/views/submissions/new.html.haml
@@ -1,8 +1,7 @@
 %h1.text-center.m-t-0
-  #{@survey.customer.name} Survey Structure
+  #{@survey.customer.name} Survey
   %small
     = @survey.name
-= render "layouts/shared/alert_messages"
 .panel-piled
   .dropdown.pull-right
     %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true",
@@ -10,11 +9,9 @@
       = fa_icon "chevron-down"
     %ul.dropdown-menu
       %li
-        = link_to "Preview this survey", [:new, @survey, :submission]
+        = link_to "Edit survey", [:edit, @survey.customer, @survey]
       %li
-        = link_to "Edit survey", [:edit, @customer, @survey]
-      %li
-        = link_to "Delete survey", [@customer, @survey], method: :delete
+        = link_to "Delete survey", [@survey.customer, @survey], method: :delete
   %h1
     = @survey.name
   %p
@@ -22,4 +19,5 @@
 
   %h2
     Questions
-  = render @survey.questions
+  = render "form"
+
