--- a/app/views/surveys/_option_fields.html.haml
+++ b/app/views/surveys/_option_fields.html.haml
@@ -1,5 +1,10 @@
 .option-fields
-  = f.hidden_field :_destroy
-  = link_to fa_icon("close"), "#", data: { behavior: "remove_option_fields" }, class: "pull-right"
-  = f.input :name, label: false, placeholder: "Fill in with an option",
-    input_html: { class: "input-short"}
+  .row
+    .col-md-6
+      = f.input :title, label: false, placeholder: "Fill in with a possible option",
+        input_html: { class: "input-sm" }
+    .col-md-1
+      = f.hidden_field :_destroy
+      = link_to fa_icon("close"), "#", class: "btn btn-danger btn-xs",
+        data: { behavior: "remove_option_fields" }
+
