--- a/app/views/surveys/_survey.html.haml
+++ b/app/views/surveys/_survey.html.haml
@@ -11,5 +11,5 @@
       = link_to fa_icon("remove"), [survey.customer, survey], method: :delete, class: "pull-right"
       %h2
         %strong
-          15
+          = survey.questions.count
           questions
