Generate answer type models for each question

--- a/app/views/answers/fields/_answer_date.html.haml
+++ b/app/views/answers/fields/_answer_date.html.haml
@@ -1,1 +1,2 @@
-= f.input :answer_date, label: false
+= f.simple_fields_for :answer_date, answer.build_answer_date do |builder|
+  = builder.input :response, label: false
