--- a/app/views/answers/fields/_answer_multiple.html.haml
+++ b/app/views/answers/fields/_answer_multiple.html.haml
@@ -1,2 +1,4 @@
-= f.association :choices, label: false, collection: choices,
-  as: :check_boxes, include_hidden: false
+= f.simple_fields_for :choice_answers, answer.choice_answers.build do |builder|
+  = builder.input :choice_id, label: false, collection: choices, as: :check_boxes
+
+
