--- a/app/views/answers/fields/_answer_single.html.haml
+++ b/app/views/answers/fields/_answer_single.html.haml
@@ -1,1 +1,2 @@
-= f.input :answer_single, label: false, collection: choices, as: :radio_buttons
+= f.simple_fields_for :choice_answers, answer.choice_answers.build do |builder|
+  = builder.input :choice_id, label: false, collection: choices, as: :radio_buttons
