--- a/app/views/submissions/_form.html.haml
+++ b/app/views/submissions/_form.html.haml
@@ -1,13 +1,12 @@
 = simple_form_for [@survey, @submission] do |f|
-  - if @submission.errors.any?
-    = @submission.errors.messages
   - @submission.answers.each do |answer|
     %h3
       = answer.question.title
     = f.simple_fields_for :answers, answer do |a|
       = a.hidden_field :question_id
       = render "answers/fields/answer_#{answer.question.question_type.prefix}",
-        f: a, choices: answer.question.choices, options: answer.question.options, answer: answer
+        f: a, choices: answer.question.choices, options: answer.question.options,
+        images: answer.question.images, answer: answer
 
   = f.button :submit, "Submit survey",
       class: "btn-block btn-primary", data: { disable_with: "Submitting survey..." }
