Add validation for survey questions client and server

--- a/app/views/surveys/_option_fields.html.haml
+++ b/app/views/surveys/_option_fields.html.haml
@@ -5,6 +5,5 @@
         input_html: { class: "input-sm" }
     .col-md-1
       = f.hidden_field :_destroy
-      = link_to fa_icon("close"), "#", class: "btn btn-danger btn-xs",
-        data: { behavior: "remove_option_fields" }
+      = link_to fa_icon("close"), "#", data: { behavior: "remove_option_fields" }
 
