Remove option value question and add Select type

--- a/app/views/answers/fields/_answer_date.html.haml
+++ b/app/views/answers/fields/_answer_date.html.haml
@@ -1,2 +1,2 @@
-= f.simple_fields_for :answer_date, answer.build_answer_date do |builder|
+= f.simple_fields_for :answer_date do |builder|
   = builder.input :response, label: false
