--- a/app/views/answers/fields/_answer_open.html.haml
+++ b/app/views/answers/fields/_answer_open.html.haml
@@ -1,2 +1,2 @@
-= f.simple_fields_for :answer_open, answer.build_answer_open do |builder|
- = builder.input :response, label: false
+= f.simple_fields_for :answer_open do |builder|
+  = builder.input :response, label: false
