--- a/app/views/answers/fields/_answer_image.html.haml
+++ b/app/views/answers/fields/_answer_image.html.haml
@@ -1,3 +1,3 @@
-= f.simple_fields_for :answer_image, answer.build_answer_image do |builder|
+= f.simple_fields_for :answer_image do |builder|
   = builder.collection_radio_buttons(:image_id, images, :id, :file) do |b|
     = b.label { b.radio_button + image_tag(b.object.file.url(:thumb), class: "img-responsive") }
