--- a/app/views/answers/fields/_answer_raiting.html.haml
+++ b/app/views/answers/fields/_answer_raiting.html.haml
@@ -1,2 +1,3 @@
-= f.simple_fields_for :answer_raiting, answer.build_answer_raiting do |builder|
+= f.simple_fields_for :answer_raiting do |builder|
   = builder.input :response, label: false
+
