--- a/app/views/answers/fields/_answer_single.html.haml
+++ b/app/views/answers/fields/_answer_single.html.haml
@@ -1,2 +1,2 @@
-= f.simple_fields_for :choice_answer, answer.build_choice_answer do |builder|
+= f.simple_fields_for :choice_answer do |builder|
   = builder.input :choice_id, label: false, collection: choices, as: :radio_buttons
