--- a/app/views/answers/fields/_answer_image.html.haml
+++ b/app/views/answers/fields/_answer_image.html.haml
@@ -1,3 +1,5 @@
 = f.simple_fields_for :answer_image do |builder|
-  = builder.collection_radio_buttons(:image_id, images, :id, :file) do |b|
-    = b.label { b.radio_button + image_tag(b.object.file.url(:thumb), class: "img-responsive") }
+  = builder.collection_radio_buttons(:image_id, images, :id, :file,
+    collection_wrapper_tag: :div, collection_wrapper_class: "form-group radio-images",
+    item_wrapper_tag: false) do |b|
+    = b.radio_button + image_tag(b.object.file.url(:thumb), class: "img-responsive")
