--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,10 @@ a:hover, a:focus {
   text-decoration: none;
 }
 
+.help-block {
+  color: #a94442;
+}
+
 .navbar-brand {
   font-family: "Amatic SC", cursive;
   font-size: 30px !important;
