Add counter cache to questions and surveys

--- a/app/views/customers/_customer.html.haml
+++ b/app/views/customers/_customer.html.haml
@@ -12,7 +12,7 @@
         "data-toggle": "dropdown", href: "#", role: "button"}
           %h2
             %strong
-              = customer.surveys.count
+              = customer.surveys_count
               Surveys
             %span.caret
         %ul.dropdown-menu
