--- a/app/views/surveys/_survey.html.haml
+++ b/app/views/surveys/_survey.html.haml
@@ -8,8 +8,9 @@
       %p
         = survey.description
     .col-md-3
-      = link_to fa_icon("remove"), [survey.customer, survey], method: :delete, class: "pull-right"
+      = link_to fa_icon("remove"), [survey.customer, survey],
+        method: :delete, class: "pull-right"
       %h2
         %strong
-          = survey.questions.count
+          = survey.questions_count
           questions
