--- a/app/views/layouts/shared/_nav_bar.html.haml
+++ b/app/views/layouts/shared/_nav_bar.html.haml
@@ -10,7 +10,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to "Dynamic Surveys", [current_user, :customers], class: "navbar-brand"
+      = link_to "Dynamic Surveys", root_path, class: "navbar-brand"
     / Collect the nav links, forms, and other content for toggling
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
