--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -1,3 +1,3 @@
-%h1.text-center.m-t-0 Manage your current customers
+%h1.text-center.m-t-0 Manage the following customers
 = render "layouts/shared/alert_messages"
 = render @customers
