--- a/app/views/layouts/shared/_nav_bar.html.haml
+++ b/app/views/layouts/shared/_nav_bar.html.haml
@@ -20,8 +20,9 @@
               Clients
               %span.caret
             %ul.dropdown-menu
-              %li
-                = link_to "New Customer", [:new, current_user, :customer]
+              - if is_admin?
+                %li
+                  = link_to "New Customer", [:new, :admin, current_user, :customer]
               %li
                 = link_to "All Customers", [current_user, :customers]
       %ul.nav.navbar-nav.navbar-right
