--- a/app/views/layouts/shared/_nav_bar.html.haml
+++ b/app/views/layouts/shared/_nav_bar.html.haml
@@ -25,6 +25,18 @@
                   = link_to "New Customer", [:new, :admin, current_user, :customer]
               %li
                 = link_to "All Customers", [current_user, :customers]
+
+          - if is_admin?
+            %li.dropdown
+              %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true", "data-toggle": "dropdown", href: "#", role: "button"}
+                Users
+                %span.caret
+              %ul.dropdown-menu
+                %li
+                  = link_to "New User", [:new, :admin, :user]
+                %li
+                  = link_to "All Users", [:admin, :users]
+
       %ul.nav.navbar-nav.navbar-right
         - if logged_in?
           %p.navbar-text
