--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,25 +95,28 @@ a:hover, a:focus {
   }
 }
 
-.btn-file {
+/* File input */
+
+.file-upload {
+  @extend .btn;
+  @extend .btn-primary;
+  @extend .btn-sm;
+
   position: relative;
   overflow: hidden;
-  margin-bottom: 1rem;
-  input[type=file] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
-  }
+  margin-bottom: 15px;
+}
+
+.file-upload input.upload {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
 }
 
 footer {
