--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -12,7 +12,7 @@
             %span Upload an image for your profile
             = f.file_field :image, label: false, class: "upload"
             = f.input :image_cache, as: :hidden
-        .col-xs-3
-          %small.file-name
+        .col-xs-5
+          %h3.file-name.m-t-0
             = file_name f.object.image
   = f.button :submit, "Submit", class: "btn-block btn-primary"
