--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,8 +1,10 @@
-= render "layouts/shared/alert_messages"
 %h1.text-center.m-t-0
-  = link_to "#{current_user.name} #{current_user.last_name} Profile", [:edit, current_user]
+  = link_to "#{current_user.name} #{current_user.last_name} Profile",
+    [:edit, current_user]
 
-= display_avatar(current_user)
+= render "layouts/shared/alert_messages"
+
+= display_image(current_user.image)
 
 %h4.text-center
   = current_user.email
