--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -1,3 +1,3 @@
 %h1.text-center.m-t-0 Create a new user account!
 .user-admin-form
-  = render "form", user: @user
+  = render "form", user: @user, customers: @customers
