--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -8,3 +8,16 @@
   %h3.text-center
     = link_to "Archive User", [:archive, :admin, @user], method: :patch,
       data: { confirm: "Are you sure you want to archive this user?"}
+
+.text-center
+  %h2
+    Assigned Roles
+
+  - if @user.roles.any?
+    %ul
+      - @user.roles.each do |role|
+        %li
+          #{role.project.name} #{role.role.titleize}
+  - else
+    %p
+      This user has no roles.
