--- a/app/views/customers/_customer.html.haml
+++ b/app/views/customers/_customer.html.haml
@@ -1,13 +1,17 @@
 .panel-list
   .row
     .col-md-9
-      %h2
-        = link_to customer.name, [@user, customer]
+      - if policy(customer).show?
+        %h2
+          = link_to customer.name, customer
+      - else
+        %h2
+          = customer.name
       %p
         = customer.description
     .col-md-3
       - if is_admin?
-        = link_to fa_icon("remove"), [:admin, @user, customer],
+        = link_to fa_icon("remove"), [:admin, customer.user, customer],
           method: :delete, class: "pull-right"
       .dropdown
         %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true",
@@ -20,5 +24,6 @@
         %ul.dropdown-menu
           %li
             = link_to "All Surveys", [customer, :surveys]
-          %li
-            = link_to "Create new", [:new, customer, :survey]
+          - if is_admin?
+            %li
+              = link_to "Create new", [:new, :admin, customer, :survey]
