Change permissions for access control list

--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -23,5 +23,5 @@
               #{role.role.titleize}
             #{role.customer.name}
     - else
-      %p
+      %p.text-center
         This user has no roles.
