--- a/app/views/customers/_customer.html.haml
+++ b/app/views/customers/_customer.html.haml
@@ -24,6 +24,6 @@
         %ul.dropdown-menu
           %li
             = link_to "All Surveys", [customer, :surveys]
-          - if is_admin?
+          - if policy(Survey.new(customer: customer)).create?
             %li
-              = link_to "Create new", [:new, :admin, customer, :survey]
+              = link_to "Create new", [:new, customer, :survey]
