--- a/app/views/submissions/new.html.haml
+++ b/app/views/submissions/new.html.haml
@@ -10,9 +10,9 @@
         = fa_icon "chevron-down"
       %ul.dropdown-menu
         %li
-          = link_to "Edit survey", [:edit, :admin, @survey.customer, @survey]
+          = link_to "Preview this survey", [@survey.customer, @survey]
         %li
-          = link_to "Delete survey", [:admin, @survey.customer, @survey], method: :delete
+          = link_to "Edit survey", [:edit, @survey.customer, @survey]
   %h1
     = @survey.name
   %p
