--- a/app/views/surveys/_survey.html.haml
+++ b/app/views/surveys/_survey.html.haml
@@ -13,9 +13,8 @@
       %p
         = survey.description
     .col-md-3
-      - if is_admin?
-        = link_to fa_icon("remove"), [:admin, survey.customer, survey],
-          method: :delete, class: "pull-right"
+      = link_to fa_icon("remove"), [survey.customer, survey],
+        method: :delete, class: "pull-right"
       %h2
         %strong
           = survey.questions_count
