--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -8,12 +8,13 @@
       = fa_icon "chevron-down"
     %ul.dropdown-menu
       %li
-        = link_to "Preview this survey", [:new, @survey, :submission]
-      - if is_admin?
+        = link_to "Submit this survey", [:new, @survey, :submission]
+      - if policy(@survey).update?
         %li
-          = link_to "Edit survey", [:edit, :admin, @customer, @survey]
+          = link_to "Edit survey", [:edit, @customer, @survey]
+      - if policy(@survey).destroy?
         %li
-          = link_to "Delete survey", [:admin, @customer, @survey], method: :delete
+          = link_to "Delete survey", [@customer, @survey], method: :delete
   %h1
     = @survey.name
     %small
