--- a/app/views/surveys/_survey.html.haml
+++ b/app/views/surveys/_survey.html.haml
@@ -16,7 +16,14 @@
       - if policy(survey).destroy?
         = link_to fa_icon("remove"), [survey.customer, survey],
           method: :delete, class: "pull-right"
-      %h2
-        %strong
-          = survey.questions_count
-          questions
+      .dropdown
+        %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true",
+        "data-toggle": "dropdown", href: "#", role: "button"}
+          %h2
+            %strong
+              = survey.questions_count
+              questions
+            %span.caret
+        %ul.dropdown-menu
+          %li
+            = link_to "Submit this survey", [:new, survey, :submission]
